display settings added
